--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,13 @@ footer .text-decoration-none {
     text-align: center;
   }
 }
+.footer-link {
+  display: inline-block;
+  text-align: center;
+}
+ul.list-unstyled {
+  padding-left: 0;
+}
 
 /* ===== Responsive ===== */
 @media (max-width: 576px) {
@@ -593,4 +600,63 @@ footer .text-decoration-none {
   background-color: #fff; /* blanco al enfocar */
   border-color: #86b7fe;
   box-shadow: 0 0 0 0.2rem rgba(13, 110, 253, 0.25); /* efecto de foco suave */
+}
+
+/*Titulos principales*/
+h1.fw-bold {
+  color: #4e6a50;
+}
+h2.fw-bold {
+  color: #4e6a50;
+}
+
+/* Botones de las cards de consejos */
+.btn-leer-mas {
+  background-color: var(--verde-principal);
+  color: white;
+  font-weight: 500;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+
+.btn-leer-mas:hover {
+  background-color: var(--verde-borde);
+}
+
+/* Botón de WhatsApp FLOTANTE */
+.whatsapp-float {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
+  background-color: #25d366; /* Verde de WhatsApp */
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  z-index: 1000; /* Para que esté por encima de todo */
+  transition: all 0.3s ease;
+  text-decoration: none; /* Elimina subrayado del enlace */
+}
+
+/* Efecto hover */
+.whatsapp-float:hover {
+  background-color: #128c7e; /* Verde más oscuro */
+  transform: scale(1.1); /* Ligero zoom */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+}
+
+/* Ajuste para móviles*/
+@media (max-width: 768px) {
+  .whatsapp-float {
+    width: 50px;
+    height: 50px;
+    font-size: 25px;
+    bottom: 15px;
+    right: 15px;
+  }
 }
